routes to security fix?

--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -18,12 +18,14 @@ spring:
             - Path=/login,/registration,/logout
           filters:
             - AddRequestParameter=failure,error,pass,exists,incorrect
-            - RewriteResponseHeader=X-Original-Location, (?<location>.*), http://localhost:8000
+            - AddResponseHeader=X-Original-Location, (?<location>.*), http://localhost:8000
         - id: clients
           uri: lb://clients
           order: 2
           predicates:
             - Path=/**
+          filters:
+            - AddResponseHeader=X-Original-Location, (?<location>.*), http://localhost:8000
 
 management:
   endpoint:
